# yode

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DESIGN.md  OPTIMIZATION.md  PRODUCT.md  README.md  README.zh-CN.md  install.ps1  install.sh
apps/yode-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/yode-desktop/src-tauri/capabilities/: default.json
apps/yode-desktop/src-tauri/icons/: icon.icns
apps/yode-desktop/src-tauri/src/: browser_settings.rs  commands.rs  computer_use_settings.rs  desktop_settings_store.rs  git_settings.rs  hook_settings.rs  lib.rs  license_notices.rs  main.rs  protocol.rs  runtime.rs  session_helpers.rs  session_import.rs  worktree.rs
apps/yode-desktop/src-tauri/src/commands/: app.rs  configuration.rs  mcp.rs  provider.rs  session.rs  settings.rs  terminal.rs  turn.rs  update.rs  worktree.rs
apps/yode-desktop/src-tauri/src/runtime/: browser_settings_runtime.rs  computer_use_settings_runtime.rs  configuration_runtime.rs  edit_diff_runtime.rs  engine_setup.rs  git_settings_runtime.rs  hooks_settings_runtime.rs  import_runtime.rs  mcp_config.rs  mcp_runtime.rs  personalization_runtime.rs  provider_runtime.rs  session_runtime.rs  settings_runtime.rs  settings_system.rs  terminal_helpers.rs  terminal_runtime.rs  tests.rs  turn_events.rs  turn_loop.rs  turn_permissions.rs  turn_runtime.rs  worktree_runtime.rs
crates/yode-agent/: Cargo.toml
crates/yode-agent/src/: lib.rs  manager.rs  orchestration.rs  planning.rs
crates/yode-core/: Cargo.toml
crates/yode-core/src/: config.rs  constants.rs  context.rs  context_collapse.rs  context_manager.rs  cost_tracker.rs  db.rs  engine.rs  error.rs  hooks.rs  instructions.rs  lib.rs  permission.rs  plugins.rs  session.rs  session_memory.rs  setup.rs  skills.rs  tool_runtime.rs  tool_telemetry.rs  transcript.rs  updater.rs
crates/yode-core/src/context_manager/: runtime.rs  tests.rs
crates/yode-core/src/context_manager/runtime/: compression.rs  mod.rs  summary.rs
crates/yode-core/src/db/: messages.rs  mod.rs  records.rs  sessions.rs  tests.rs
crates/yode-core/src/engine/: bootstrap_runtime.rs  compaction_runtime.rs  hooks_runtime.rs  intelligence_runtime.rs  llm_runtime.rs  nonstream_turn_runtime.rs  recovery_runtime.rs  request_runtime.rs  retry.rs  runtime_support.rs  session_state.rs  stream_retry_runtime.rs  streaming_turn_runtime.rs  subagent_runner.rs  system_prompt_runtime.rs  tests.rs  tool_execution_runtime.rs  tool_pool_runtime.rs  tool_result.rs  turn_output_runtime.rs  turn_setup_runtime.rs  types.rs
crates/yode-core/src/engine/compaction_runtime/: blocks.rs  budget.rs  mod.rs  summarizer.rs
crates/yode-core/src/engine/hooks_runtime/: mod.rs  session_hooks.rs  tool_hooks.rs
crates/yode-core/src/engine/session_state/: artifacts.rs  memory.rs  mod.rs
crates/yode-core/src/engine/streaming_turn_runtime/: cancel.rs  finalization.rs  mod.rs  protocol.rs  stream_loop.rs  tool_calls.rs
crates/yode-core/src/engine/tests/: compaction.rs  hooks.rs  partition.rs  (+2 more)
crates/yode-core/src/hooks/: manager.rs  parsing.rs  tests.rs
crates/yode-core/src/instructions/: instruction_loader.rs  memory_loader.rs  tests.rs
crates/yode-core/src/permission/: bash.rs  classifier.rs  config.rs  denial_tracker.rs  manager.rs  mod.rs  shell.rs  tests.rs  types.rs
crates/yode-core/src/session_memory/: io.rs  schema.rs  snapshot.rs  tests.rs
crates/yode-core/src/tool_telemetry/: helpers.rs  mod.rs
crates/yode-core/src/transcript/: mod.rs  render.rs  summary.rs  tests.rs  writer.rs
crates/yode-core/src/updater/: config_state.rs  download.rs  tests.rs  versioning.rs
crates/yode-llm/: Cargo.toml
crates/yode-llm/src/: lib.rs  mock.rs  provider.rs  registry.rs  types.rs
crates/yode-llm/src/providers/: anthropic.rs  error_shared.rs  gemini.rs  http_client.rs  mod.rs  openai.rs  openai_compat.rs  retry.rs  streaming_shared.rs
crates/yode-llm/src/types/: message.rs  mod.rs  protocol.rs
crates/yode-mcp/: Cargo.toml
crates/yode-mcp/src/: config.rs  lib.rs
crates/yode-mcp/src/client/: mod.rs  tool_wrapper.rs
crates/yode-mcp/src/server/: mod.rs
crates/yode-runtime/: Cargo.toml
crates/yode-runtime/src/: desktop_events.rs  lib.rs  provider_bootstrap.rs
crates/yode-tools/: Cargo.toml
crates/yode-tools/src/: cron_manager.rs  lib.rs  lsp_manager.rs  path_format.rs  registry.rs  runtime_tasks.rs  state.rs  tool.rs  validation.rs
crates/yode-tools/src/builtin/: agent.rs  ask_user.rs  bash.rs  batch.rs  codex_compat.rs  cron.rs  edit_artifact.rs  edit_file.rs  file_diff.rs  git_commit.rs  git_diff.rs  git_log.rs  git_status.rs  glob.rs  grep.rs  hypothesis.rs  ls.rs  lsp.rs  mcp_resources.rs  memory.rs  mod.rs  multi_edit.rs  notebook_edit.rs  orchestration_common.rs  plan_mode.rs  project_map.rs  read_file.rs  review_common.rs  shell_runtime.rs  skill.rs  test_runner.rs  todo.rs  tool_search.rs  web_fetch.rs  web_search.rs  worktree.rs  write_file.rs
crates/yode-tools/src/runtime_tasks/: mod.rs  store.rs  tests.rs  transcripts.rs
crates/yode-tui/: Cargo.toml
crates/yode-tui/src/: display_text.rs  event.rs  i18n.rs  inspector_targets.rs  lib.rs  mcp_resource_artifacts.rs  runtime_artifacts.rs  runtime_display.rs  runtime_timeline.rs  system_message.rs  terminal_caps.rs  tool_grouping.rs  tool_output_summary.rs
crates/yode-tui/src/app/: commands.rs  completion.rs  detail_inspector.rs  engine_events.rs  history.rs  input.rs  key_dispatch.rs  key_handlers.rs  lifecycle.rs  mod.rs  rendering.rs  runtime.rs  scrollback.rs  state.rs  time.rs  turn_flow.rs  wizard.rs
crates/yode-tui/src/commands/: artifact_nav.rs  context.rs  inspector_bridge.rs  mod.rs  registry.rs  transcript_review_nav.rs  workspace_nav.rs  workspace_text.rs
crates/yode-tui/src/ui/: badges.rs  chat.rs  chat_entries.rs  chat_header.rs  chat_layout.rs  chat_markdown.rs  error_format.rs  highlighted_code.rs  input.rs  inspector.rs  layout.rs  mod.rs  palette.rs  panels.rs  pending.rs  responsive.rs  status_bar.rs  status_summary.rs  structured_diff.rs  tool_confirm.rs  turn_status.rs  wizard.rs
(+900 files in other folders)
