[package]
name = "yode-agent"
version.workspace = true
edition.workspace = true

[dependencies]
yode-core = { workspace = true }
yode-llm = { workspace = true }
yode-tools = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
