[package]
name = "yode-core"
version.workspace = true
edition.workspace = true

[dependencies]
yode-llm = { workspace = true }
yode-tools = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
crossterm = { workspace = true }
rusqlite = { workspace = true }
serde_yaml_ng = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
tar = "0.4.45"
flate2 = "1.1.9"
tempfile = "3.27.0"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
