[package]
name = "yode-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
yode-tools = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rmcp = { workspace = true }
