[package]
name = "yode-runtime"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
yode-core = { workspace = true }
yode-llm = { workspace = true }
yode-tools = { workspace = true }
serde_json = { workspace = true }
