[package]
name = "yode-tui"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
yode-core = { workspace = true }
yode-llm = { workspace = true }
yode-mcp = { workspace = true }
yode-tools = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
unicode-width = "0.2"
arboard = "3.4"
dirs = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
similar = { workspace = true }
